# del-canvas

./: .gitignore  Cargo.toml  README.md
cpp-glfw/: CMakeLists.txt  main.cu
del-canvas-core/: Cargo.toml
del-canvas-core/examples/: lloyd.rs  ply.rs  points3d.rs  polybezier2.rs  polygonal_light.rs  render3d.rs
del-canvas-core/src/: colormap.rs  lib.rs  rasterize_points3.rs  rasterize_polygon.rs  rasterize_triangle.rs  raycast_trimesh2.rs  raycast_trimesh3.rs  texture.rs
del-canvas-cpu/: Cargo.toml
del-canvas-cpu-gl/: Cargo.toml
del-canvas-cpu-gl/examples/: 01_del_canvas_cpu_gl__fullscrntex.rs  01_fullscrntex.rs
del-canvas-cpu/examples/: colmap.rs  cpu_splat_gauss_ply.rs  cpu_splat_sphere_ply.rs  hair.rs  lloyd.rs  mpm2.rs  ply.rs  ply_3dgs.rs  ply_points.rs  points3d.rs  polybezier2.rs  polygonal_light.rs  render3d.rs  splat_gauss_ply.rs  splat_sphere_ply.rs
del-canvas-cpu/src/: cam3.rs  colmap.rs  gaussian_splatting.rs  lib.rs  morphology.rs  rasterize_aabb3.rs  rasterize_circle.rs  rasterize_line.rs  rasterize_points3.rs  rasterize_polygon.rs  rasterize_triangle.rs  raycast_trimesh2.rs  raycast_trimesh3.rs  splat_circle.rs  splat_circlez.rs  splat_gaussian2.rs  splat_gaussian2z.rs  splat_point2.rs  splat_point2z.rs  splat_point3.rs  tile_acceleration.rs
del-canvas-cuda/: Cargo.toml  build.rs
del-canvas-cuda-gl/: Cargo.toml
del-canvas-cuda-gl/examples/: 01_cudagl_meshtri3_texture.rs  01_fullscrntex.rs  02_cudagl_splat_gauss.rs  02_splatgauss3.rs
del-canvas-cuda-gl/src/: lib.rs
del-canvas-cuda-kernel/: Cargo.toml
del-canvas-cuda-kernel/src/: aabb2.h  lib.rs  mat2_sym.h  splat_gauss.cu  splat_sphere.cu  xyzrgb.cu
del-canvas-cuda/examples/: 00_simple.rs  01_fullscrntex.rs  01_raycast_trimesh3.rs  02_cuda_splat_sphere.rs  02_rasterize_points.rs  02_raycast_trimesh3.rs  02_splat_sphere.rs  03_cuda_splat_gauss.rs  03_ply_cuda.rs  03_rasterize_points.rs  03_splat_gauss.rs  raycast_trimesh3.rs  simple.rs
del-canvas-cuda/src/: cumsum.rs  lib.rs  mat4_col_major.h  pix2tri.cu  pix2tri.rs  pnt2xyzrgb.rs  sort_by_key_u64.rs  sort_u32.rs  sort_u64.rs  splat_gauss.rs  splat_sphere.rs  vec3.h
del-canvas-glutin/: Cargo.toml
del-canvas-glutin/examples/: 01_fullscrntex.rs  main.rs
del-canvas-glutin/src/: lib.rs
del-canvas-image/: Cargo.toml
del-canvas-image/src/: canvas_bitmap.rs  lib.rs  texture.rs
del-canvas-kernel-cuda/: Cargo.toml  build.rs
del-canvas-kernel-cuda/src/: lib.rs  xyzrgb.cu
del-canvas-raycast/: Cargo.toml
del-canvas-raycast-cudarc/: Cargo.toml
del-canvas-raycast-cudarc-kernel/: Cargo.toml
del-canvas-raycast-cudarc/examples/: 01_raycast_trimesh3.rs
del-canvas-raycast-cudarc/src/: pix2tri.rs
del-canvas-raycast/examples/: 00_smallpt.rs  01_analytic_polygonal_light.rs  02_cornell_box.rs  03_material_test_ball.rs  04_env_light.rs  05_trimesh3.rs
del-canvas-raycast/src/: lib.rs
del-canvas-splat-cudarc/: Cargo.toml
del-canvas-splat-cudarc-kernel/: Cargo.toml
del-canvas-splat-cudarc/examples/: 02_splat_sphere.rs  03_splat_gauss.rs
del-canvas-splat-cudarc/src/: splat_gauss.rs  splat_sphere.rs
del-raycast/: Cargo.toml
del-raycast/examples/: 02_cornell_box.rs  03_material_test_ball.rs  04_env_light.rs  05_trimesh3.rs
del-splat-cudarc/: Cargo.toml
del-splat-cudarc-kernel/: Cargo.toml
demos/: Cargo.toml
demos-cuda/: Cargo.toml
demos-cuda/examples/: 00_simple.rs  01_fullscrntex.rs  02_raycast_trimesh3.rs  03_ply_cuda.rs
demos-cuda/src/: cumsum.rs  lib.rs  sort_u32.rs  sort_u64.rs
demos-cudarc-gl/: Cargo.toml
demos-cudarc-gl/examples/: 01_cudagl_meshtri3_texture.rs  02_cudagl_splat_gauss.rs
demos-gl/: Cargo.toml
demos-gl/examples/: 00_gl__fullscrntex.rs
demos/examples/: 01_fullscrntex.rs
examples/: hair.rs  lloyd.rs  mpm2.rs  points3d.rs  polybezier2.rs  polygonal_light.rs  render3d.rs
src/: cam2.rs  cam3.rs  canvas.rs  canvas_bitmap.rs  canvas_gif.rs  canvas_svg.rs  color.rs  colormap.rs  dda.rs  image_interpolation.rs  lib.rs  paint_pixcenter.rs  rasterize.rs  rasterize_circle.rs  rasterize_gaussian_splatting.rs  rasterize_line.rs  rasterize_points3.rs  rasterize_polygon.rs  rasterize_triangle.rs  raycast_trimesh2.rs  raycast_trimesh3.rs
src/rasterize/: aabb2.rs  aabb3.rs  circle.rs  circle2.rs  lib.rs  line.rs  line2.rs  polygon.rs  polygon2.rs  polyline2.rs  triangle.rs  triangle2.rs  xy.rs
