[package]
name = "del-canvas"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "drawing primitives (e.g., triangles and lines) to bitmap images and gif animation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.19"
image = "0.25.5"
png = "0.17.16"
anyhow = "1.0.95"
gif = "0.13.1"
slice-of-array = "0.3.2"

# for develop
# del-geo-core = { path = "../del-geo/del-geo-core"}
# del-msh-core = { path = "../del-msh/del-msh-core"}

# for github push
del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git"}
del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }

# for deploy
# del-geo-core = "0.1.33"
# del-msh-core = "0.1.37"

