[package]
name = "del-canvas"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "drawing primitives (e.g., triangles and lines) to bitmap images and gif animation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.19"
image = { version = "0.25.6", features = ["hdr"], default-features = false}
png = "0.17.16"
anyhow = "1.0.97"
gif = "0.13.1"
slice-of-array = "0.3.2"
arrayref = "0.3.9"

# for develop
# del-geo-core = { path = "../del-geo/del-geo-core"}

# for github push
# del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git"}

# for deploy
del-geo-core = "0.1.34"

