[package]
name = "del-canvas-cpu-gl"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
glutin = "0.32.0"
glutin-winit = "0.5.0"
winit = "0.30.5"
raw-window-handle = "0.6.2"
image = "0.25.2"
#
# workspace
del-msh-core = { workspace = true }
del-geo-core = { workspace = true }
del-gl-core = { workspace = true }
del-winit-glutin = {  workspace = true }
# internal workspace
del-canvas-cpu = { workspace = true }

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.2.1"


