[package]
name = "del-canvas-cpu"
description = "hogehoge"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = {workspace = true}
png = {workspace = true}
gif = {workspace = true}
image = {workspace = true}
nalgebra = {workspace = true}
rand = {workspace = true}
rayon = {workspace = true}
anyhow = {workspace = true}
arrayref = {workspace = true}
itertools = {workspace = true}
rand_chacha = {workspace = true}
slice-of-array = {workspace = true}
byteorder = {workspace = true}
del-msh-core.workspace = true
del-msh-nalgebra.workspace = true
del-geo-core.workspace = true
del-geo-nalgebra.workspace = true
del-canvas-image.workspace = true