[package]
name = "del-canvas-cuda"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "hogehoge"

[dependencies]
num-traits = "0.2.19"
anyhow = "1.0.86"
cudarc = { version = "=0.11.8", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false }
# workspace
del-msh-core = { workspace = true }
del-geo-core = { workspace = true }
# local
del-canvas-core = { path = "../del-canvas-core"}

[build-dependencies]
bindgen_cuda = "0.1.5"
