[package]
name = "del-canvas-cuda"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "hogehoge"

[dependencies]
# for texture
anyhow = "1.0.89"
num-traits = "0.2.19"
slice-of-array = "0.3.2"
itertools = "0.13.0"
# cuda
cudarc = { version = "=0.11.8", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false }
# workspace
del-msh-core = { path = "../../del-msh/del-msh-core" }
del-geo-core = { path = "../../del-geo/del-geo-core" }
del-gl-core = { path = "../../del-gl/del-gl-core"}
del-winit-glutin = {path = "../../del-gl/del-winit-glutin"}
# internal
del-canvas-cpu = { path = "../del-canvas-cpu" }
del-canvas-cuda-kernel = { path = "../del-canvas-cuda-kernel" }

[build-dependencies]
bindgen_cuda = "0.1.5"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"