[package]
name = "del-canvas-glutin"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
glutin = "0.32.0"
glutin-winit = "0.5.0"
winit = "0.30.5"
raw-window-handle = "0.6"

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.2.1"