[package]
name = "del-canvas-raycast-cudarc"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
cuda = ["dep:del-msh-cudarc", "dep:del-cudarc-util", "dep:cudarc", "dep:del-canvas-raycast-cudarc-kernel"]

[dependencies]
arrayref.workspace = true
anyhow.workspace = true
num-traits.workspace = true
slice-of-array.workspace = true
itertools.workspace = true
del-msh-core.workspace = true
del-geo-core.workspace = true
del-canvas-image.workspace = true

# cuda dependent
cudarc = {workspace = true, optional = true }
del-cudarc-util = {workspace = true, optional = true }
del-msh-cudarc = { workspace = true, optional = true }
del-canvas-raycast-cudarc-kernel = { workspace = true, optional = true }